# QT_framework

./: .gitignore  append.txt
Calculator/: CMakeLists.txt  Main.qml  main.cpp  savefile.cpp  savefile.h
socket/TCPClient/: .gitignore
socket/TCPClient/TcpClient/: CMakeLists.txt  Main.qml  main.cpp  tcpclient.cpp  tcpclient.h
socket/TCPServer/: .gitignore
socket/TCPServer/TcpServer/: CMakeLists.txt  Main.qml  main.cpp  tcpserver.cpp  tcpserver.h
